tests/snapshots/examples_fixtures/basics__mini_database.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/mini_database.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:29:1
   |
29 | print(first_record["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/mini_database.flx:29:1
   |
29 | print(first_record["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:30:1
   |
30 | print(first_record["age"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:33:1
   |
33 | print(second_record["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:34:1
   |
34 | print(second_record["age"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:37:1
   |
37 | print(len(db));
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Bool with Unit.

  --> examples/basics/mini_database.flx:45:12
   |
45 |         if opt_eq(record["id"], id) {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |            ------------------------ expected Bool, found Unit
   |            ------------------------ if condition is known at compile time

Help:
  use a Bool expression, or make the condition/guard explicitly boolean


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:54:1
   |
54 | print(found["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify indexable value (Array/List/Tuple/Map) with Unit.

  --> examples/basics/mini_database.flx:54:7
   |
54 | print(found["name"]);
   |       ^^^^^
   |       ----- expected indexable value (Array/List/Tuple/Map), found Unit
   |       ----- indexed value is known at compile time

Help:
  index only arrays, lists, tuples, or maps


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Bool with Unit.

  --> examples/basics/mini_database.flx:62:12
   |
62 |         if opt_eq(record["name"], name) {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |            ---------------------------- expected Bool, found Unit
   |            ---------------------------- if condition is known at compile time

Help:
  use a Bool expression, or make the condition/guard explicitly boolean


--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `findByName` has the wrong type.

  --> examples/basics/mini_database.flx:70:30
   |
57 | fn findByName(records, name) {

58 |     if len(records) == 0 {

59 |         None;

60 |     } else {

61 |         let record = first(records);

62 |         if opt_eq(record["name"], name) {

63 |             record;

64 |         } else {

65 |             findByName(rest(records), name);

66 |         };

67 |     };

68 | }

69 | 

70 | let charlie = findByName(db, "Charlie");
   |                              ^^^^^^^^^
   |                              --------- this argument is `String`

Help:
  Expected `Int` as the 2nd argument.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:71:1
   |
71 | if charlie == None {
   | ^^^^^^^^^^^^^^^^^^^^
72 |     print("Not found");
   | ^^^^^^^^^^^^^^^^^^^^^^^
73 | } else {
   | ^^^^^^^^
74 |     print(charlie["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
75 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify indexable value (Array/List/Tuple/Map) with Unit.

  --> examples/basics/mini_database.flx:74:11
   |
74 |     print(charlie["name"]);
   |           ^^^^^^^
   |           ------- expected indexable value (Array/List/Tuple/Map), found Unit
   |           ------- indexed value is known at compile time

Help:
  index only arrays, lists, tuples, or maps


--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `findByName` has the wrong type.

  --> examples/basics/mini_database.flx:77:29
   |
57 | fn findByName(records, name) {

58 |     if len(records) == 0 {

59 |         None;

60 |     } else {

61 |         let record = first(records);

62 |         if opt_eq(record["name"], name) {

63 |             record;

64 |         } else {

65 |             findByName(rest(records), name);

66 |         };

67 |     };

68 | }

69 | 

70 | let charlie = findByName(db, "Charlie");

71 | if charlie == None {

72 |     print("Not found");

73 | } else {

74 |     print(charlie["name"]);

75 | };

76 | 

77 | let nobody = findByName(db, "Nobody");
   |                             ^^^^^^^^
   |                             -------- this argument is `String`

Help:
  Expected `Int` as the 2nd argument.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/mini_database.flx:78:1
   |
78 | if nobody == None {
   | ^^^^^^^^^^^^^^^^^^^
79 |     print("Not found");
   | ^^^^^^^^^^^^^^^^^^^^^^^
80 | } else {
   | ^^^^^^^^
81 |     print(nobody["name"]);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
82 | };
   | ^^

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify indexable value (Array/List/Tuple/Map) with Unit.

  --> examples/basics/mini_database.flx:81:11
   |
81 |     print(nobody["name"]);
   |           ^^^^^^
   |           ------ expected indexable value (Array/List/Tuple/Map), found Unit
   |           ------ indexed value is known at compile time

Help:
  index only arrays, lists, tuples, or maps

Found 16 errors.
== stdout ==
<not executed>
